fixed hamburger menu being too long

--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ hamburger-menu {
     margin-top: 9vh;
     background-color: white;
     width: 30vw;
-    height: 100vh;
+    height: 91vh;
     overflow-y: auto;
     opacity: 1;
 }
